--- a/index.html
+++ b/index.html
@@ -8,18 +8,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/PTstyle.css">
 
-    <style>
-    .grid-container {
-      display: grid;
-      grid-template-columns: repeat(18, 1fr); /* 18 equal-width columns */
-      grid-gap: 8px;
-    }
-
-    .row {
-        margin-bottom: 10px;
-    }
-
-</style>
 </head>
 <body>
     <header class="d-flex justify-content-center align-items-center">
@@ -29,6 +17,12 @@
     <main>
         <section>
             <div class="container-fluid">
+
+                <div id="mobile-notice">
+                    <p class="mx-sm-5">This website is currently optimized for PC or larger screens. Compatibility with smaller screen sizes is still a work in progress.</p>
+                </div>
+                  
+
                 <div class="periodic-table  mx-4">
                     
                     <!-- ================================== First Row ================================== -->
